--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@ html,body{
 }
 
 .box {
-  cursor: pointer;
+  border-radius: 75%;
   height: 48px;
   width: auto;
   font-size: 12px;
@@ -111,14 +111,17 @@ html,body{
   padding: 16px 20px 16px 20px ;
   border-color: var(#EDEDFA, rgb(237, 237, 250));
   background-color: var(rgb(255, 255, 255), rgb(255, 255, 255));
-  border-radius: 12px;
+  border-radius: 10px;
   color: #ffffff;
   gap: 8px;
   position: relative;
+
   display: flex;
 }
 
 .box button:hover {
+
+  cursor: pointer;
   border-color: #767575;
 }
 
