--- a/style.css
+++ b/style.css
@@ -198,7 +198,6 @@ html,body{
 .s2 {
   font-family: "Outfit", sans-serif;
   position: absolute;
-  /* top: 30px; */
   left: 150px;
   right: 150px;
   height: 170px;
@@ -209,7 +208,6 @@ html,body{
 }
 
 .s2 h1{
-  font-style: normal;
    color: #1C1C1C;
    display: flex;
    align-items: center;
@@ -259,4 +257,25 @@ html,body{
    line-height: 1em;
 }
 
+
+
+.s2 p{
+  padding-top: 30px;
+  font-family: Inter,sans-serif;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #767575;
+  font-size: 22px;
+  font-weight: 500;
+  text-align: center;
+  height: 60px;
+  width: 700px;
+  line-height: 1.5em;
+  letter-spacing: -.5px;
+  margin-left: 22%;
+  /* padding: 4px 10px 4px 10px; */
+  white-space: pre wrap;
+
+}
 
